	  creating the initrd because in theory the file system that contains
	  parts of the symlinks is not mounted in initrd.
	* Fix KDUMP_NETCONFIG=auto by calling mkinitrd with right parameters.
	* Create core dumps in the initrd when kdumptool crashes.
	* Fix compile warning in IdentifyKernel::execute().
	* Also return the default terminal size if ioctl(TIOCGWINSZ) returns
	  a size of 0x0.

2008-11-01  Bernhard Walle <bwalle@suse.de>

	* Assume a default terminal size of 80x25 (for printing the horizontal
	  line).
	* Check the exit status of kdumptool.

2008-10-26  Bernhard Walle <bwalle@suse.de>

	* boot.kdump: Use the full kernel release (obtained with
	  /sbin/get_kernel_version) to build the initrd name also when symlinks
	  are used.

2008-10-22  Bernhard Walle <bwalle@suse.de>

	* actually check <version>-kdump before <version>-<flavour> when
	  looking for a suitable kdump kernel

2008-08-18  Bernhard Walle <bwalle@suse.de>

	* change default location to "/var/crash"

2008-08-15  Bernhard Walle <bwalle@suse.de>

	* make the kdump init script a boot script ("boot.kdump")
	* fix init script comments
	* add meta information to manpages

2008-08-12  Bernhard Walle <bwalle@suse.de>

	* correct init script: remove remote FS dependency and also add
	  "Should-Stop"

2008-08-07  Bernhard Walle <bernhard.walle@gmx.de>

	* add kdump(7) manual page

2008-08-06  Bernhard Walle <bwalle@suse.de>

	* implement email support (send_notification command)

2008-08-05  Bernhard Walle <bwalle@suse.de>

	* add vmcore(5) manual page
	* don't report ELF32 as invalid ELF class

2008-08-01  Bernhard Walle <bwalle@suse.de>

	* make dependency to libssh2 optional

2008-08-01  Bernhard Walle <bernhard.walle@gmx.de>

	* handle more programs in $KDUMP_REQUIRED_PROGRAMS correct
	* move original /etc/fstab back

2008-07-31  Bernhard Walle <bernhard.walle@gmx.de>

	* change execution state to 'boot'
	* use UUID for fstab.kdump