@@ -14,6 +14,8 @@
 	* Fix compile warning in IdentifyKernel::execute().
 	* Also return the default terminal size if ioctl(TIOCGWINSZ) returns
 	  a size of 0x0.
+	* Fix std::logic_error in Email::send() that caused kdumptool to
+	  terminate unexpectedly.
 
 2008-11-01  Bernhard Walle <bwalle@suse.de>
 
